# healthcare

RagApp_Medical-Frontend-master/: .env  package-lock.json  package.json
RagApp_Medical-Frontend-master/src/app/: layout.tsx  page.tsx
RagApp_Medical-Frontend-master/src/app/Components/Main/: Main.jsx
RagApp_Medical-Frontend-master/src/app/Components/OuestionForm/: QuestionForm.jsx
RagApp_Medical-Frontend-master/src/app/Components/RsponseAI/: ResponseAI.jsx
RagApp_Medical-Frontend-master/src/app/login/: page.jsx
RagApp_Medical-Frontend-master/src/app/signup/: page.jsx
RagApp_Medical_Backend-main/RagApp_Medical_Backend-main/: .env  main.py  pyproject.toml
