[tool.poetry]
name = "medicalrag-backend"
version = "0.1.0"
description = ""
authors = ["ArsalanAyaz <henrykoff7788@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
langchain = "^0.3.4"
langchain-google-genai = "^2.0.1"
uvicorn = {extras = ["standard"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
